[package]
name = "fcss"
version = "0.1.0"
authors = ["李国志 <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
nom = "6.1.2"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
clap = "2.33.3"